--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 		</div>
 		<div class="clearfix"></div>
 		<div class="sp-pad next-portfolio-link">
-			<a href="portfolio.html" class="arrow-btn text-light" style="font-size: 40px">
+			<a href="#portfolio" class="arrow-btn text-light" style="font-size: 40px">
 				<i class="fa fa-angle-right"></i>
 				<i class="fa fa-angle-right"></i>
 				<i class="fa fa-angle-right"></i>
@@ -222,7 +222,7 @@
 		</div>
 		<div class="clearfix"></div>
 		<div class="sp-pad next-portfolio-link">
-			<a href="portfolio.html" class="arrow-btn text-light" style="font-size: 40px">
+			<a href="#portfolio" class="arrow-btn text-light" style="font-size: 40px">
 				<i class="fa fa-angle-right"></i>
 				<i class="fa fa-angle-right"></i>
 				<i class="fa fa-angle-right"></i>
@@ -266,7 +266,7 @@
 		</div>
 		<div class="clearfix"></div>
 		<div class="sp-pad next-portfolio-link">
-			<a href="portfolio.html" class="arrow-btn text-light" style="font-size: 40px">
+			<a href="#portfolio" class="arrow-btn text-light" style="font-size: 40px">
 				<i class="fa fa-angle-right"></i>
 				<i class="fa fa-angle-right"></i>
 				<i class="fa fa-angle-right"></i>
@@ -308,7 +308,7 @@
 		</div>
 		<div class="clearfix"></div>
 		<div class="sp-pad next-portfolio-link">
-			<a href="portfolio.html" class="arrow-btn text-light" style="font-size: 40px">
+			<a href="#portfolio" class="arrow-btn text-light" style="font-size: 40px">
 				<i class="fa fa-angle-right"></i>
 				<i class="fa fa-angle-right"></i>
 				<i class="fa fa-angle-right"></i>
