--- a/portfolio/clip.html
+++ b/portfolio/clip.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - WebGL enhanced javascript drag slider</title>
+  <title>JF. ALONSO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Arvo:400,700&display=swap" rel="stylesheet"><link rel="stylesheet" href="./style.css">
 
@@ -22,7 +22,7 @@
     <div data-selected="hello" class="plane-wrapper">
       <span data-selected="hello" class="plane-title">Lacrim Philippins </span>
       <div data-selected="hello" class="plane">
-        <img src="../img/video-preview/clip/lacrim-philippins.png" alt="Photo by Gregory Culmer on Unsplash" data-sampler="planeTexture" crossorigin />
+        <img src="https://raw.githubusercontent.com/jf-alonso/site/master/img/video-preview/clip/lacrim-philippins.png" alt="Photo by Gregory Culmer on Unsplash" data-sampler="planeTexture" crossorigin />
       </div>
     </div>
 
