--- a/index.html
+++ b/index.html
@@ -26,10 +26,6 @@
 	<link rel="stylesheet" href="css/style.css" />
 
 	<!-- Facebook OG -->
-	<meta property="og:title" content="curtains.js | Basic plane example">
-	<meta property="og:type" content="website">
-	<meta property="og:description" content="A basic WebGL plane bound to a HTML DOM element with curtains.js">
-	<meta property="og:image" content="https://www.curtainsjs.com/images/curtains-js-logo.jpg">
 	<script src="https://cdn.jsdelivr.net/npm/curtainsjs@5.3.1/libs/curtains.min.js"></script>
 	<!--[if lt IE 9]>
 	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -154,6 +150,7 @@
 		<div class="portfolio-warp">
 			<!-- single item -->
 			<div class="single-portfolio set-bg">
+				<a>
 				<iframe height="100%" width="100%" src="https://www.youtube.com/embed/eH1GClvoHq8" height="100%"
 					width="100%" frameborder="0" allowfullscreen></iframe>
 				<!-- <a href="single-work.html" class="portfolio-info"> -->
@@ -164,6 +161,7 @@
 
 			<!-- single item -->
 			<div class="single-portfolio set-bg">
+				<a>
 				<iframe height="100%" width="100%"
 					src="https://youtube.com/embed/CRPNcrBAiOc?autoplay=0&controls=1&showinfo=0&autohide=1"
 					frameborder="0" allowfullscreen></iframe>
@@ -171,6 +169,7 @@
 			</div>
 			<!-- single item -->
 			<div class="single-portfolio set-bg">
+				<a>
 				<iframe height="100%" width="100%" src="https://www.youtube.com/embed/GkIAcYnmph4" frameborder="0"
 					allowfullscreen></iframe>
 				<!-- <iframe class="set-bg" src="https://www.youtube.com/embed/eH1GClvoHq8" width="600" height="360" frameborder="0"  allowfullscreen></iframe> -->
@@ -178,7 +177,7 @@
 		</div>
 		<div class="clearfix"></div>
 		<div class="sp-pad next-portfolio-link">
-			<a href="#portfolio" class="arrow-btn text-light" style="font-size: 40px">
+			<a href="portfolio/clip.html" class="arrow-btn text-light" style="font-size: 40px">
 				<i class="fa fa-angle-right"></i>
 				<i class="fa fa-angle-right"></i>
 				<i class="fa fa-angle-right"></i>
@@ -196,12 +195,14 @@
 
 			<!-- single item -->
 			<div class="single-portfolio set-bg">
+				<a>
 				<iframe height="100%" width="100%" src="https://player.vimeo.com/video/352344787" frameborder="0"
 					allowfullscreen></iframe>
 				<!-- <iframe class="set-bg" src="https://www.youtube.com/embed/eH1GClvoHq8" width="600" height="360" frameborder="0"  allowfullscreen></iframe> -->
 			</div>
 
 			<div class="single-portfolio set-bg">
+				<a>
 				<iframe height="100%" width="100%" src="https://player.vimeo.com/video/374137608" frameborder="0"
 					allowfullscreen></iframe>
 				<!-- <iframe class="set-bg" src="https://www.youtube.com/embed/eH1GClvoHq8" width="600" height="360" frameborder="0"  allowfullscreen></iframe> -->
@@ -209,6 +210,7 @@
 
 			<!-- single item -->
 			<div class="single-portfolio set-bg">
+				<a>
 				<iframe height="100%" width="100%" src="https://player.vimeo.com/video/352510603" frameborder="0"
 					allowfullscreen></iframe>
 				<!-- <iframe class="set-bg" src="https://www.youtube.com/embed/eH1GClvoHq8" width="600" height="360" frameborder="0"  allowfullscreen></iframe> -->
@@ -216,7 +218,7 @@
 		</div>
 		<div class="clearfix"></div>
 		<div class="sp-pad next-portfolio-link">
-			<a href="#portfolio" class="arrow-btn text-light" style="font-size: 40px">
+			<a href="portfolio/event.html" class="arrow-btn text-light" style="font-size: 40px">
 				<i class="fa fa-angle-right"></i>
 				<i class="fa fa-angle-right"></i>
 				<i class="fa fa-angle-right"></i>
@@ -235,12 +237,14 @@
 
 			<!-- single item -->
 			<div class="single-portfolio set-bg">
+				<a>
 				<iframe height="100%" width="100%" src="https://player.vimeo.com/video/365324446" frameborder="0"
 					allowfullscreen></iframe>
 				<!-- <iframe class="set-bg" src="https://www.youtube.com/embed/eH1GClvoHq8" width="600" height="360" frameborder="0"  allowfullscreen></iframe> -->
 			</div>
 
 			<div class="single-portfolio set-bg">
+				<a>
 				<iframe height="100%" width="100%" src="https://player.vimeo.com/video/338064042" frameborder="0"
 					allowfullscreen></iframe>
 				<!-- <iframe class="set-bg" src="https://www.youtube.com/embed/eH1GClvoHq8" width="600" height="360" frameborder="0"  allowfullscreen></iframe> -->
@@ -248,6 +252,7 @@
 
 			<!-- single item -->
 			<div class="single-portfolio set-bg">
+				<a>
 				<iframe height="100%" width="100%" src="https://player.vimeo.com/video/380304836" frameborder="0"
 					allowfullscreen></iframe>
 				<!-- <iframe class="set-bg" src="https://www.youtube.com/embed/eH1GClvoHq8" width="600" height="360" frameborder="0"  allowfullscreen></iframe> -->
@@ -256,7 +261,7 @@
 		</div>
 		<div class="clearfix"></div>
 		<div class="sp-pad next-portfolio-link">
-			<a href="#portfolio" class="arrow-btn text-light" style="font-size: 40px">
+			<a href="portfolio/commercial.html" class="arrow-btn text-light" style="font-size: 40px">
 				<i class="fa fa-angle-right"></i>
 				<i class="fa fa-angle-right"></i>
 				<i class="fa fa-angle-right"></i>
@@ -272,6 +277,7 @@
 		<div class="portfolio-warp">
 '			<!-- single item -->
 			<div class="single-portfolio set-bg">
+				<a>
 				<iframe height="100%" width="100%" src="https://www.youtube.com/embed/eH1GClvoHq8" height="100%"
 					width="100%" frameborder="0" allowfullscreen></iframe>
 				<!-- <a href="single-work.html" class="portfolio-info"> -->
@@ -282,6 +288,7 @@
 
 			<!-- single item -->
 			<div class="single-portfolio set-bg">
+				<a>
 				<iframe height="100%" width="100%"
 					src="https://youtube.com/embed/CRPNcrBAiOc?autoplay=0&controls=1&showinfo=0&autohide=1"
 					frameborder="0" allowfullscreen></iframe>
@@ -289,6 +296,7 @@
 			</div>
 			<!-- single item -->
 			<div class="single-portfolio set-bg">
+				<a>
 				<iframe height="100%" width="100%" src="https://www.youtube.com/embed/GkIAcYnmph4" frameborder="0"
 					allowfullscreen></iframe>
 				<!-- <iframe class="set-bg" src="https://www.youtube.com/embed/eH1GClvoHq8" width="600" height="360" frameborder="0"  allowfullscreen></iframe> -->
@@ -297,7 +305,7 @@
 		</div>
 		<div class="clearfix"></div>
 		<div class="sp-pad next-portfolio-link">
-			<a href="#portfolio" class="arrow-btn text-light" style="font-size: 40px">
+			<a href="portfolio/report.html" class="arrow-btn text-light" style="font-size: 40px">
 				<i class="fa fa-angle-right"></i>
 				<i class="fa fa-angle-right"></i>
 				<i class="fa fa-angle-right"></i>
