--- a/portfolio/clip.html
+++ b/portfolio/clip.html
@@ -52,7 +52,7 @@
     <div id="planes">
 
       <div data-selected="https://www.youtube.com/embeded/eH1GClvoHq8" class="plane-wrapper">
-        <!-- <span data-selected="hello" class="plane-title">Lacrim Philippins </span> -->
+        <!-- <span data-selected="https://www.youtube.com/embeded/qNHBG0GJ_g0" class="plane-title">Lacrim Philippins </span> -->
         <div data-selected="https://www.youtube.com/embeded/eH1GClvoHq8" class="plane">
           <img
             src="https://raw.githubusercontent.com/jf-alonso/site/master/img/video-preview/clip/lacrim-philippins.png"
@@ -61,7 +61,7 @@
       </div>
 
       <div data-selected="https://www.youtube.com/embeded/CRPNcrBAiOc" class="plane-wrapper">
-        <!-- <span data-selected="hello" class="plane-title">Philippines</span> -->
+        <!-- <span data-selected="https://www.youtube.com/embeded/qNHBG0GJ_g0" class="plane-title">Philippines</span> -->
         <div data-selected="https://www.youtube.com/embeded/CRPNcrBAiOc" class="plane">
           <img
             src="https://raw.githubusercontent.com/jf-alonso/site/master/img/video-preview/clip/adios-algerino-soolking.png"
@@ -69,68 +69,68 @@
         </div>
       </div>
 
-      <div data-selected="hello" class="plane-wrapper">
-        <span data-selected="hello" class="plane-title">Germaine Kobo et Bella Lawson <br> "Bella Makossa"</span>
-        <div data-selected="hello" class="plane">
+      <div data-selected="https://player.vimeo.com/video/374723028" class="plane-wrapper">
+        <span data-selected="https://player.vimeo.com/video/374723028" class="plane-title">Germaine Kobo et Bella Lawson <br> "Bella Makossa"</span>
+        <div data-selected="https://player.vimeo.com/video/374723028" class="plane">
           <img src="https://raw.githubusercontent.com/jf-alonso/site/master/img/video-preview/clip/bella-makossa.png"
             data-sampler="planeTexture" alt="Photo by Samule Sun on Unsplash" crossorigin />
         </div>
       </div>
 
 
-      <div data-selected="hello" class="plane-wrapper">
-        <span data-selected="hello" class="plane-title">Bob Lunet <br> "Aznavour du pauvre"</span>
-        <div data-selected="hello" class="plane">
+      <div data-selected="https://www.youtube.com/embeded/qNHBG0GJ_g0" class="plane-wrapper">
+        <span data-selected="https://www.youtube.com/embeded/qNHBG0GJ_g0" class="plane-title">Bob Lunet <br> "Aznavour du pauvre"</span>
+        <div data-selected="https://www.youtube.com/embeded/qNHBG0GJ_g0" class="plane">
           <img
             src="https://raw.githubusercontent.com/jf-alonso/site/master/img/video-preview/clip/aznavour-du-pauvre.png"
             alt="Photo by Jailam Rashad on Unsplash" data-sampler="planeTexture" crossorigin />
         </div>
       </div>
 
-      <div data-selected="hello" class="plane-wrapper">
-        <span data-selected="hello" class="plane-title">Bob Lunet <br> "Poignée de punchline"</span>
-        <div data-selected="hello" class="plane">
+      <div data-selected="https://www.youtube.com/embeded/ZG0RMTavQ_0" class="plane-wrapper">
+        <span data-selected="https://www.youtube.com/embeded/ZG0RMTavQ_0" class="plane-title">Bob Lunet <br> "Poignée de punchline"</span>
+        <div data-selected="https://www.youtube.com/embeded/ZG0RMTavQ_0" class="plane">
           <img
             src="https://raw.githubusercontent.com/jf-alonso/site/master/img/video-preview/clip/poigne-de-punchline.png"
             data-sampler="planeTexture" alt="Photo by Chris Karidis on Unsplash" crossorigin />
         </div>
       </div>
 
-      <div data-selected="hello" class="plane-wrapper">
-        <span data-selected="hello" class="plane-title">Bob Lunet <br> "Bonjour pour souffrir"</span>
-        <div data-selected="hello" class="plane">
+      <div data-selected="https://www.youtube.com/embeded/GkIAcYnmph4" class="plane-wrapper">
+        <span data-selected="https://www.youtube.com/embeded/GkIAcYnmph4" class="plane-title">Bob Lunet <br> "Bonjour pour souffrir"</span>
+        <div data-selected="https://www.youtube.com/embeded/GkIAcYnmph4" class="plane">
           <img src="https://raw.githubusercontent.com/jf-alonso/site/master/img/video-preview/clip/chaques-fois.png"
             data-sampler="planeTexture" alt="Photo by Chris Karidis on Unsplash" crossorigin />
         </div>
       </div>
 
-      <div data-selected="hello" class="plane-wrapper">
-        <span data-selected="hello" class="plane-title">Bob Lunet <br> "chaque fois"</span>
-        <div data-selected="hello" class="plane">
+      <div data-selected="https://player.vimeo.com/video/315701353" class="plane-wrapper">
+        <span data-selected="https://player.vimeo.com/video/315701353" class="plane-title">Bob Lunet <br> "chaque fois"</span>
+        <div data-selected="https://player.vimeo.com/video/315701353" class="plane">
           <img src="https://raw.githubusercontent.com/jf-alonso/site/master/img/video-preview/clip/chaque-fois.png"
             data-sampler="planeTexture" alt="Photo by Samule Sun on Unsplash" crossorigin />
         </div>
       </div>
 
-      <div data-selected="hello" class="plane-wrapper">
-        <span data-selected="hello" class="plane-title">Salrim feat Bighazi<br> "Propre et carré" </span>
-        <div data-selected="hello" class="plane">
+      <div data-selected="https://player.vimeo.com/video/384204458" class="plane-wrapper">
+        <span data-selected="https://player.vimeo.com/video/384204458" class="plane-title">Salrim feat Bighazi<br> "Propre et carré" </span>
+        <div data-selected="https://player.vimeo.com/video/384204458" class="plane">
           <img src="https://raw.githubusercontent.com/jf-alonso/site/master/img/video-preview/clip/salrim-bighazi.png"
             alt="Photo by James Connolly on Unsplash" data-sampler="planeTexture" crossorigin />
         </div>
       </div>
 
-      <div data-selected="hello" class="plane-wrapper">
-        <span data-selected="hello" class="plane-title">100-16 L’équipe feat L’Afro<br> "Laisse les ramper" </span>
-        <div data-selected="hello" class="plane">
+      <div data-selected="https://player.vimeo.com/video/384200335" class="plane-wrapper">
+        <span data-selected="https://player.vimeo.com/video/384200335" class="plane-title">100-16 L’équipe feat L’Afro<br> "Laisse les ramper" </span>
+        <div data-selected="https://player.vimeo.com/video/384200335" class="plane">
           <img src="https://raw.githubusercontent.com/jf-alonso/site/master/img/video-preview/clip/100-16.png"
             alt="Photo by James Connolly on Unsplash" data-sampler="planeTexture" crossorigin />
         </div>
       </div>
 
-      <div data-selected="hello" class="plane-wrapper">
-        <span data-selected="hello" class="plane-title">Nathalie Donice <br> "Le Silence Fait Mal" </span>
-        <div data-selected="hello" class="plane">
+      <div data-selected="https://www.youtube.com/embeded/iTh-pWyCbK4" class="plane-wrapper">
+        <span data-selected="https://www.youtube.com/embeded/iTh-pWyCbK4" class="plane-title">Nathalie Donice <br> "Le Silence Fait Mal" </span>
+        <div data-selected="https://www.youtube.com/embeded/iTh-pWyCbK4" class="plane">
           <img src="https://raw.githubusercontent.com/jf-alonso/site/master/img/video-preview/clip/nathalie-donice.png"
             alt="Photo by James Connolly on Unsplash" data-sampler="planeTexture" crossorigin />
         </div>
